Split up bracketsController.js into 2 new controllers, for better separation of scope variables and performance.
I also removed a few functions which weren't being used.

--- a/app/views/brackets/view.html
+++ b/app/views/brackets/view.html
@@ -1,4 +1,4 @@
-<div data-ng-init="findAllTeams().then(getBracketWithScores)" class="viewBracket" data-ng-controller="BracketsController">
+<div data-ng-init="findAllTeams().then(getBracketWithScores)" class="viewBracket" data-ng-controller="ViewBracketController">
   <h3>{{ bracket.name }}</h3>
   <span class="bracketOwner">by {{ owner.name }}</span>
   <div class="bracketGrid" ng-grid="bracketGridOptions"></div>
