Revved angularfire bower dep to ~0.7.1 that was just released, instead of shipping my own.
Tweaked how brackets are loaded in poolsController.js, added a couple of ng-href for safety, and split ng-repeat from ng-include so they're not on the same <div>.

--- a/app/views/brackets/view.html
+++ b/app/views/brackets/view.html
@@ -4,6 +4,6 @@
   <div class="bracketGrid" ng-grid="bracketGridOptions"></div>
 
   <p ng-show-auth="'login'" ng-show="auth.user.uid === bracket.ownerId" class="currentUserBracket">
-    <a class="btn btn-primary" href="#/pools/{{ pool.$id }}/brackets/{{ bracketId }}/edit">Edit your bracket</a>
+    <a class="btn btn-primary" ng-href="#/pools/{{ pool.$id }}/brackets/{{ bracketId }}/edit">Edit your bracket</a>
   </p>
 </div>
