Changed the pool view page to show the currently logged-in user's bracket first.
Using ng-if to show/hide child elements instead of ng-show was the key change that made this possible. Other code cleanup and minor fixes:

pool view page:
* primitives are now set on a $scope.model object, instead of directly on the $scope itself (not sure if this matters or not)

bracket view page:
* init functions are now called in the controller, instead of in the view
* getBracketWithScores() no longer waits for the findAllTeams() call's promise to resolve
* team name field now has a fixed width, so it won't ever shorten the team name

other:
* upgraded angularjs from 1.2.14 --> 1.2.15
* updated app version from 0.0.1 --> 0.1.0
* added notes for running locally to the README

--- a/client/views/pools/view.html
+++ b/client/views/pools/view.html
@@ -5,13 +5,17 @@
   <a class="btn btn-default" href="#/pools" style="margin-right: 20px">View all pools</a>
 
   <a class="btn btn-primary" ng-href="#/pools/{{ pool.$id }}/brackets/create"
-     data-ng-show="currentUserHasLoaded && !currentUserBracketId">
+     data-ng-show="model.currentUserHasLoaded && !model.currentUserBracketId">
     Create a bracket
   </a>
 
-  <!-- TODO: use currentUserBracketId to display the current user's bracket at the top, and find a way to remove it from the pool.brackets list -->
+  <!-- show the current logged-in user's bracket first, if they have one -->
+  <div ng-if="model.currentUserHasLoaded && model.currentUserBracketId">
+    <div ng-init="bracketId = model.currentUserBracketId" ng-include="'views/brackets/view.html'" class="poolBracket"></div>
+  </div>
 
-  <div ng-repeat="bracketId in pool.brackets" class="poolBracket">
-    <div ng-include="'views/brackets/view.html'"></div>
+  <div ng-repeat="bracketId in pool.brackets">
+    <!-- exclude the bracket for the current logged in user, so it isn't shown twice -->
+    <div ng-if="bracketId !== model.currentUserBracketId" ng-include="'views/brackets/view.html'" class="poolBracket"></div>
   </div>
 </div>
