removing ng-cloak from <body>, and adding it back to the login and account pages
fixes bug #3

--- a/client/partials/login.html
+++ b/client/partials/login.html
@@ -1,6 +1,6 @@
 <h2>Login Page</h2>
 
-<form>
+<form ng-cloak>
     <label>
         <span>email</span>
         <input type="email" ng-model="email" />
