Extracted a separate controller for the pool view page, since poolsController.js was getting a little long.
Also fixed a bug with the Create Pool button using the wrong model property in its ng-show directive.

--- a/client/views/pools/edit.html
+++ b/client/views/pools/edit.html
@@ -13,7 +13,7 @@
       <div class="form-group">
         <label class="col-md-4 control-label" for="createpool"></label>
         <div class="col-md-4">
-          <button id="createpool" name="createpool" data-ng-click="createPool()" data-ng-show="!poolId" class="btn btn-primary">Create Pool</button>
+          <button id="createpool" name="createpool" data-ng-click="createPool()" data-ng-show="!model.poolId" class="btn btn-primary">Create Pool</button>
         </div>
       </div>
       <br>
