--- a/client/views/pools/view.html
+++ b/client/views/pools/view.html
@@ -1,13 +1,18 @@
-<div data-ng-init="findOnePool(); findBrackets();">
-  <h2 style="display: inline-block; padding-right: 30px">{{ pool.name }}</h2>
-  <strong>Manager: </strong>{{ manager.name }}
-  <br/>
-  <a class="btn btn-default" href="#/pools" style="margin-right: 20px">View all pools</a>
+<div>
+  <div class="row">
+    <div class="col-md-6">
+      <h2 style="display: inline-block; padding-right: 30px">{{ pool.name }}</h2>
+      <strong>Manager: </strong> {{ manager.name }}
+      <br/>
+      <a class="btn btn-default" href="#/pools" style="margin-right: 20px">View all pools</a>
 
-  <a class="btn btn-primary" ng-href="#/pools/{{ pool.$id }}/brackets/create"
-     data-ng-show="model.currentUserHasLoaded && !model.currentUserBracketId">
-    Create a bracket
-  </a>
+      <a class="btn btn-primary" ng-href="#/pools/{{ pool.$id }}/brackets/create"
+         data-ng-show="model.currentUserHasLoaded && !model.currentUserBracketId">
+        Create a bracket
+      </a>
+    </div>
+    <div class="col-md-6"></div>
+  </div>
 
   <!-- show the current logged-in user's bracket first, if they have one -->
   <div ng-if="model.currentUserBracketId">
