--- a/client/views/pools/view.html
+++ b/client/views/pools/view.html
@@ -1,4 +1,4 @@
-<div>
+<div ng-cloak>
   <div class="row">
     <div class="col-md-6">
       <h2 style="display: inline-block; padding-right: 30px">{{ pool.name }}</h2>
