Added a new "view brackets" page, which lists the brackets and points at the top of the view pool page.
Also added ng-grid-flexible-height.js; I *knew* that would come in handy!

Logged bug #4 for the error message I'm getting:

TypeError: Object #<Scope> has no method 'destroy'

--- a/client/css/app.css
+++ b/client/css/app.css
@@ -67,6 +67,10 @@ p.currentUserBracket {
     margin-top: 10px;
 }
 
+.allBracketsGrid {
+    border: 1px solid rgb(212,212,212);
+    margin-top: 20px;
+}
 
 
 
