--- a/client/views/brackets/list.html
+++ b/client/views/brackets/list.html
@@ -1,3 +1,3 @@
-<div ng-controller="ListBracketsController" ng-cloak>
-  <div ng-grid="allBracketsGridOptions"></div>
+<div ng-controller="ListBracketsController">
+  <div class="allBracketsGrid" ng-grid="allBracketsGridOptions"></div>
 </div>
