Added num_teams_remaining field to firebase, and to the brackets list view.

--- a/client/css/app.css
+++ b/client/css/app.css
@@ -71,6 +71,12 @@ body {
     border: 1px solid rgb(212,212,212);
     margin-top: 20px;
 }
+.allBracketsGrid .ngCell {
+    text-align: right;
+}
+.allBracketsGrid .col0 {
+    text-align: left;
+}
 
 
 
