--- a/client/css/app.css
+++ b/client/css/app.css
@@ -32,6 +32,28 @@ body {
 .bracketGrid .ngHeaderText small {
     font-weight: normal;
 }
+.bracketGrid .even .col0,
+.bracketGrid .even .col1,
+.bracketGrid .even .won {
+    background-color: #92EF92;
+}
+/* odd rows are lighter */
+.bracketGrid .odd .col0,
+.bracketGrid .odd .col1,
+.bracketGrid .odd .won {
+    background-color: #9EFB9E;
+}
+.bracketGrid .even .eliminated,
+.bracketGrid .even .eliminated .col0,
+.bracketGrid .even .eliminated .col1 {
+    background-color: #EF9292;
+}
+/* odd rows are lighter */
+.bracketGrid .odd .eliminated,
+.bracketGrid .odd .eliminated .col0,
+.bracketGrid .odd .eliminated .col1 {
+    background-color: #FB9E9E;
+}
 .bracketGrid .ngCell {
     text-align: right;
 }
