--- a/client/views/pools/view.html
+++ b/client/views/pools/view.html
@@ -8,7 +8,7 @@
 
       <a class="btn btn-primary" ng-href="#/pools/{{ pool.$id }}/brackets/create"
          data-ng-show="model.currentUserHasLoaded && !model.currentUserBracketId">
-        Create a bracket
+        Select Your Teams
       </a>
     </div>
     <div class="col-md-4 col-md-offset-2" ng-if="pool.brackets">
