Changed wording in header, main and pools page, and added link to /pools
Also reduced main image size to 640x480, so it doesn't take up the whole page.

--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -69,16 +69,20 @@
     </div>
   </div>
 
-  <img src="img/BracketBackground.jpg" class="center-block"/>
+  <a href="#/pools">
+    <img src="img/BracketBackground.jpg" class="center-block"/>
+  </a>
 
   <div class="row-fluid section2">
     <div class="span5 offset1 copy copy-right">
       <p>
-The rules for the game are simple:  Everyone picks 13 teams whose seeds add up to 100.  For example, if UNC is a # 1 seed and VCU is a #13 seed and you pick them, they combine to make 14, and you need to select 11 other teams whose seeds add up to 86.
+The rules for the game are simple: you pick 13 teams whose seeds add up to 100. For example, if UNC is a # 1 seed and VCU is a #13 seed and you pick them, they combine to make 14, and you need to select 11 other teams whose seeds add up to 86.
       </p>
       <p>
-You earn points everytime one of your chosen teams wins a game.  If a team wins a game, you get the value of their seed plus a designated point amount, which ascends each round as follows: 1, 2, 4, 8, 16, 32.  So, if you picked VCU as a #13 seed and they win games in the first three rounds, you would get 13+1, 13+2, and 13+4.
+You earn points every time one of your chosen teams wins a game. If a team wins a game, you get the value of their seed plus a designated point amount, which ascends each round as follows: 1, 2, 4, 8, 16, 32. So, if you picked VCU as a #13 seed and they win games in the first three rounds, you would get 13+1, 13+2, and 13+4.
       </p>
+      <br>
+      <p>To get started now, <a href="#/pools">select a March Madness pool</a>, and pick your 13 teams!</p>
     </div>
   </div>
 </div>
