--- a/client/views/header.html
+++ b/client/views/header.html
@@ -10,7 +10,7 @@
         <span class="icon-bar"></span>
       </button>
 
-      <a class="navbar-brand" href="#">Pick 100 Pool</a>
+      <a class="navbar-brand" href="#">Rules</a>
     </div>
 
     <div class="collapse navbar-collapse">
