--- a/client/views/header.html
+++ b/client/views/header.html
@@ -11,15 +11,16 @@
       </button>
 
       <a class="navbar-brand" href="#">Rules</a>
-    </div>
 
-    <div class="collapse navbar-collapse">
-      <ul class="nav navbar-nav">
+      <ul class="navbar-nav">
         <li data-ng-repeat="entry in navbarEntries" data-ng-class="{ active: entry.isActive }">
           <a href="#{{entry.link}}">{{entry.title}}</a>
         </li>
       </ul>
 
+    </div>
+
+    <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown" ng-show-auth="'login'">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
