Adds a pool option to prevent bracket changes after the tourney starts
Also records timestamps when a bracket is created or edited, excludes play-in (round 1) game teams from being included in brackets, and uses time zones for the tourney start and end times.

--- a/client/css/app.css
+++ b/client/css/app.css
@@ -20,6 +20,13 @@ body {
     text-decoration: none;
 }
 
+.editPool fieldset {
+    width: 600px;
+}
+.editPool label {
+    text-align: left;
+}
+
 /* styles for the ng-grid directive on the create/edit bracket page */
 .selectTeamsGrid {
     border: 1px solid rgb(212,212,212);
