--- a/client/views/brackets/view.html
+++ b/client/views/brackets/view.html
@@ -3,7 +3,10 @@
   <span class="bracketOwner">by {{ owner.name }}</span>
   <div class="bracketGrid" ng-grid="bracketGridOptions"></div>
 
-  <div ng-show-auth="'login'" ng-show="auth.user.uid === bracket.ownerId" class="row currentUserBracket">
+  <!-- In order for the edit or delete bracket buttons to be displayed, the user needs to be logged in, they need to be the
+       owner of the bracket, and the current date needs to be before the first game of the tournament UNLESS the pool has
+       allowBracketChangesDuringTourney = true. -->
+  <div ng-show-auth="'login'" ng-show="auth.user.uid === bracket.ownerId && isUserAllowedToEditBracket" class="row currentUserBracket">
     <div class="col-md-2">
       <a class="btn btn-primary" ng-href="#/pools/{{ pool.$id }}/brackets/{{ bracketId }}/edit">Change Your Teams</a>
     </div>
